<resources>
    <string name="app_name">MT CASH</string>
    <string name="back">Back</string>
    <string name="create_your_account">Create your account</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="pin">PIN</string>
    <string name="forgot_pin">FORGOT PIN?</string>
    <string name="forgot_pinn">FORGOT PIN</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">DON’T HAVE AN ACCOUNT?</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="levelone" translatable="false">Level 1</string>
    <string name="leveltwo" translatable="false">Level 2</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="resend">Resend</string>
    <string name="otp_not_recieved">OTP NOT RECIEVED?</string>
    <string name="verify">Verify</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="enter_pin">ENTER PASSWORD</string>
    <string name="confirm_pin">CONFIRM PASSWORD</string>
    <string name="change_pin">Change Password</string>
    <string name="set_your_pin">Set your PIN</string>
    <string name="set_your_password">Set your password</string>
    <string name="pin_will_be_sent_on_your_mobile_number">Pin will be sent on your mobile number</string>
    <string name="enter_national_identity_number">ENTER NATIONAL IDENTITY NUMBER</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">ENTER FIRST NAME</string>
    <string name="enter_last_name">ENTER LAST NAME</string>
    <string name="enter_date_of_birth">ENTER DATE OF BIRTH</string>
    <string name="select_gender">SELECT GENDER</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home_cap">HOME</string>
    <string name="title_transaction_cap">TRANSACTION</string>
    <string name="title_pin_cap">PIN</string>
    <string name="title_approval_cap">APPROVALS</string>
    <string name="quick_recharge">Quick Recharge</string>
    <string name="recharge">Recharge</string>
    <string name="recharge_newLine">\nRecharge</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="send_money">Send Money</string>
    <string name="send_money_newLine">Send \nMoney</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_newLine">\nTransfer</string>
    <string name="cash_service">Cash Service</string>
    <string name="cash_services">Cash Services</string>
    <string name="air_time">Air Time</string>
    <string name="payments">Payments</string>
    <string name="payments_newline">\nPayments</string>
    <string name="qr">QR</string>
    <string name="qr_newLine">\nQR</string>
    <string name="accounts">Accounts</string>
    <string name="accounts_newLine">\nAccounts</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="notifications">Notifications</string>

    <string name="tag_menu">menu</string>
    <string name="balance">Balance</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="payment_type">Payment Type</string>
    <string name="plan_type">Plan Type</string>
    <string name="bill_type">Bill Type</string>
    <string name="company_type">Company Type</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="validate">Validate</string>
    <string name="confirmation">Confirmation</string>
    <string name="company_name">Company Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="receipt_code">Receipt code</string>
    <string name="fee_loyalty">Fee(Loyalty)</string>
    <string name="amount" translatable="false">Amount</string>
    <string name="amounts">Amounts</string>
    <string name="enter_amount_caps">ENTER AMOUNT</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="loyalty">Loyalty</string>
    <string name="pay">Validate</string>
    <string name="cancel">cancel</string>
    <string name="downloadrecipt" translatable="false">Download Recipt</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="your_new_balance_is">Your new balance is</string>
    <string name="ok">ok</string>
    <string name="success">SUCCESS</string>
    <string name="error_msg_generic">Something went wrong!</string>
    <string name="account_details">ACCOUNT DETAILS</string>
    <string name="account_number">Account Number</string>
    <string name="current_balance">Current Balance</string>
    <string name="profile">Profile</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="yeary_sending_limit">Yeary Sending Limit</string>
    <string name="yearly_receiving_limit">Yearly Receiving Limit</string>
    <string name="monthly_sending_limit">Monthly Sending Limit</string>
    <string name="monthly_receiving_limit">Monthly Receiving Limit</string>
    <string name="daily_sending_limit">Daily Sending Limit</string>
    <string name="daily_receiving_limit">Daily Receiving Limit</string>
    <string name="transaction_history">transaction history</string>
    <string name="wallet_balance">Wallet Balance:</string>
    <string name="quick_amount">Quick Amount</string>
    <string name="my_approvals">My Approvals</string>
    <string name="all_approvals">All Approvals</string>
    <string name="request_initiator">Request Initiator</string>
    <string name="initiator_name">Initiator Name</string>
    <string name="approval_type">Approval Type</string>
    <string name="approval_id">Approval ID</string>
    <string name="exourt">Exourt</string>
    <string name="transaction_fee">Transaction Fee</string>
    <string name="total">TOTAL</string>
    <string name="approve">Approve</string>
    <string name="favorites">Favorites</string>
    <string name="select_payment_type">Select payment type</string>
    <string name="select_bill_type">Select bill type</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="dummyText">All users on MySpace will know that there are millions of people out there. Every day besides so many people joining this community, there are many others who will be looking out for friends. This will mean that they are naturally looking out for good people who are interesting enough. For this, the profile has to be very interesting.</string>
    <string name="enter_password_caps">ENTER PASSWORD</string>
    <string name="confirm_password_caps">CONFIRM PASSWORD</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="password">Password</string>
    <string name="password_caps">PASSWORD</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_caps">FORGOT PASSWORD?</string>
    <string name="change">Change</string>
    <string name="enter_old_password_caps">ENTER OLD PASSWORD</string>
    <string name="confirm_new_password_caps">CONFIRM NEW PASSWORD</string>
    <string name="enter_new_password_caps">ENTER NEW PASSWORD</string>
    <string name="set_passwordd">Set Password</string>
    <string name="hi">Hi,</string>
    <string name="transfer_type">Transfer Type</string>
    <string name="enter_receiver_s_mobile_number_caps">ENTER RECEIVER\'S MOBILE NUMBER</string>
    <string name="select_favorite">SELECT FAVORITE</string>
    <string name="alert">Alert</string>
    <string name="dear_customer">Dear Customer</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="receiver_s_name">Receiver\'s Name</string>
    <string name="receiver_s_mobile_number">Receiver\'s Number</string>
    <string name="source">Source</string>
    <string name="wallet">Wallet</string>
    <string name="bill">Bill</string>
    <string name="fee">Fee</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="total_cost">Total Cost</string>
    <string name="please_wait">PLEASE WAIT</string>
    <string name="loading">LOADING</string>
    <string name="generateqr">Generate QR</string>
    <string name="scan_qr">Or Scan QR</string>
    <string name="note">Note</string>

    <string name="submit">Submit</string>

    <string name="confirmation_txt">Are you sure?</string>
    <string name="default_account_confirmation">Do you want to choose this m-wallet mt cash default for doing operations?</string>
    <string name="default_account_otp">Please enter OTP to proceed further</string>
    <string name="operation_success">Operation performed successfully.</string>
    <string name="operation_failure">Failed to perform operation.</string>
    <string name="click_to_call">Click to Call</string>
    <string name="pending">Pending</string>

    <string name="addNick">Add Nick</string>
    <string name="please_assign_nick_for_the_new_favorite">Please assign nick for the new favorite</string>

    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="enter_code">Enter Code</string>
    <string name="agree_terms"><![CDATA[You must agree to Terms & Conditions to proceed further]]></string>
    <string name="regex_alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ/[^a-zA-Z àâäèéêëîïôœùûüÿçÀÂÄÈÉÊËÎÏÔŒÙÛÜŸÇ]/</string>
    <string name="enter_consumer_number">Enter Consumer number</string>
    <string name="transaction_detials">Transaction details</string>
    <string name="date">Date</string>
    <string name="sender_name">Sender Name</string>
    <string name="sender_identity">Sender Identity</string>
    <string name="enter_name">Enter Name</string>
    <string name="update">Update</string>
    <string name="language_arabic">Arabic</string>
    <string name="status" translatable="false">Status</string>
    <string name="dummyitem" translatable="false">dummy Text</string>
    <string name="law" translatable="false">Add the words “in accordance with Law 09-08, you have the right to access,                  rectify and oppose the processing of your personal data.                  This processing was the subject of an authorization request to the CNDP</string>
    <string name="close" translatable="false">close</string>
    <string name="open" translatable="false">open</string>
    <string name="upgrade_profile">Upgrade Profile</string>
    <string name="select_document_type">Please select image first.</string>

</resources>
