<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_active"
        android:title="@string/title_home_cap" />

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/ic_transactions_inactive"
        android:title="@string/title_transaction_cap" />

    <item
        android:id="@+id/empty"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_pin"
        android:icon="@drawable/ic_pin_inactive"
        android:title="@string/title_pin_cap" />

    <item
        android:id="@+id/navigation_approval"
        android:icon="@drawable/ic_approvals_inactive"
        android:title="@string/title_approval_cap" />

</menu>
