<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.es.marocapp.usecase.login.LoginActivityViewModel" />

        <variable
            name="listener"
            type="com.es.marocapp.usecase.login.forgotpassword.ForgotPasswordClickListner" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".usecase.login.forgotpassword.ForgotPasswordFragment">

        <include android:id="@+id/forgotPinHeader"
            layout="@layout/layout_login_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/forgotPinHeader"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            >
            <com.es.marocapp.widgets.MarocEditText
                android:id="@+id/input_forgot_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/myTextInputLabel"
                android:inputType="phone"
                android:maxLength="12"
                android:hint="@string/enter_mobile_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.es.marocapp.widgets.MarocLightTextView
            android:id="@+id/txtForgotPasswordInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_will_be_sent_on_your_mobile_number"
            android:textColor="@color/colorTextGreyLight"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_mobile_number"
            app:layout_constraintStart_toStartOf="@+id/input_layout_mobile_number"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_national_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtForgotPasswordInstruction"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            >
            <com.es.marocapp.widgets.MarocEditText
                android:id="@+id/input_forgot_national_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/myTextInputLabel"
                android:inputType="numberDecimal"
                android:hint="@string/enter_national_identity_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.es.marocapp.widgets.MarocButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="@dimen/_16ssp"
            android:textAllCaps="false"
            android:onClick="@{listener::onBackButtonClick}"
            android:background="@drawable/button_disable"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/colorTextGreyDark"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_national_ID"
            app:layout_constraintStart_toStartOf="@+id/input_layout_national_ID"
            />

        <com.es.marocapp.widgets.MarocButton
            android:id="@+id/btnNext"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="@dimen/_16ssp"
            android:textAllCaps="false"
            android:background="@drawable/button_enable"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/colorWhite"
            android:onClick="@{listener::onNextButtonClick}"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_national_ID"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_national_ID"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>